# harness-eval

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  INDEX.md  README.md  pyproject.toml  requirements.txt  tools.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-score.yml  publish.yml
docs/: api.md
docs/superpowers/specs/: 2026-03-27-benchmark-generation-design.md
src/harness_eval/: __init__.py  cli.py  config.py  exporter.py  fixer.py  init.py  models.py  recommender.py  remote.py  runner.py  scanner.py  watcher.py
src/harness_eval/analyzers/: __init__.py  base.py  context.py  context_depth.py  docs.py  entropy.py  feedback.py  reproducibility.py  safety.py  scaffolding.py
src/harness_eval/generator/: __init__.py  git_analyzer.py  models.py  pipeline.py
src/harness_eval/reporters/: __init__.py  badge.py  console.py  markdown.py
tests/: test_badge.py  test_cli.py  test_config.py  test_content_depth.py  test_entropy.py  test_exporter.py  test_fail_under.py  test_fixer.py  test_generator.py  test_grade.py  test_init.py  test_leaderboard.py  test_markdown.py  test_recommender.py  test_remote.py  test_runner.py  test_scanner.py  test_scanner_config.py  test_watcher.py
