[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-eval"
version = "0.2.0"
description = "Measure harness engineering quality"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["click>=8.0", "rich>=13.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["black>=24.0", "ruff>=0.4", "pytest>=8.0"]

[project.scripts]
harness-eval = "harness_eval.cli:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "I", "N"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["harness_eval"]
